--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ h1 {
     color: black;
     position: relative;
     left: 5px;
-    text-shadow: 2px 2px rgb(152, 153, 153);
 }
 .font1 {
     font-family:monospace;
@@ -24,7 +23,6 @@ h1 {
     bottom: 15px;
     text-align: right;
     font-family:monospace;
-    text-shadow: 1px 1px rgb(152, 153, 153);    
 }
 .buttons {
     text-align: center;
@@ -32,17 +30,17 @@ h1 {
 .buttons >.rankerButton:hover{
     background: linear-gradient(rgba(0,0,0,0.08),rgba(0,0,0,0.08));
     color:black;
-    text-shadow:none;
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
 }
 .buttons >.calculatorButton:hover{
     background: linear-gradient(rgba(0,0,0,0.08),rgba(0,0,0,0.08));
     color:black;
-    text-shadow:none;
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
 }
 .buttons >.statsButton:hover{
     background: linear-gradient(rgba(0,0,0,0.08),rgba(0,0,0,0.08));
     color:black;
-    text-shadow:none;
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
 }
 .rankerButton {
     position:relative;
@@ -83,13 +81,13 @@ h1 {
     border:1px solid white;
     text-shadow:1px 1px black;
 }
-.p1 {
+.statsp1 {
     font-family: monospace;
     font-size: large;
     position: relative;
     top:20px;
     left:15px;
-    text-shadow: 1px 1px rgb(126, 133, 133);
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
 }
 .label1 {
     font-family: monospace;
@@ -99,14 +97,10 @@ h1 {
     font-size: 100%;
     font-family: monospace;
     text-decoration: none;
-    background-color:rgba(48, 171, 187, 0.521);
+    background: linear-gradient(to left, rgba(0,0,0,.01),rgba(0,0,0,.01));
     color: #000000;
     padding: 5px 10px 5px 10px;
-    border-top: 2px solid #95cfdd;
-    border-right: 4px solid #054e61;
-    border-bottom: 4px solid #054e61;
-    border-left: 2px solid #95cfdd;
-    text-shadow: 1px 1px rgb(126, 133, 133);
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
 }
 #wcaid {
     position: relative;
@@ -115,14 +109,10 @@ h1 {
     font-size: 100%;
     font-family: monospace;
     text-decoration: none;
-    background-color: #3588b8;
-    color: #c0e2eb;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0.1),rgba(255, 255, 255, 0.1));
+    color: rgb(0,0,0);
     padding: 5px 10px 5px 10px;
-    border-top: 2px solid #84c1e4;
-    border-right: 4px solid #083b58;
-    border-bottom: 4px solid #083b58;
-    border-left: 2px solid #84c1e4;
-    text-shadow: 1px 1px rgb(126, 133, 133);
+    border:0.6px solid white;
 }
 .submit1 {position:relative;
     top:20px;
@@ -130,28 +120,157 @@ h1 {
     font-size: 100%;
     font-family: monospace;
     text-decoration: none;
-    background-color: #2c7ead;
-    color: #c0e2eb;
+    background: linear-gradient(to left, rgba(0,0,0,.3),rgba(0,0,0,.3));
+    color: rgb(255, 255, 255);
     padding: 5px 10px 5px 10px;
-    border-top: 2px solid #84c1e4;
-    border-right: 4px solid #083b58;
-    border-bottom: 4px solid #083b58;
-    border-left: 2px solid #84c1e4;
-    text-shadow: 1px 1px rgb(43, 44, 44);
+    border:0.6px solid white;
+    text-shadow:1px 1px black;
 }
-.p2 {
+.submit1:hover{
+    background: linear-gradient(rgba(0,0,0,0.08),rgba(0,0,0,0.08));
+}
+.calcp1 {
     font-family: monospace;
     font-size: large;
     position: relative;
     top:20px;
     left:15px;
-    text-shadow: 1px 1px rgb(126, 133, 133);
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
 }
-.p3 {
+.rankerp1 {
     font-family: monospace;
     font-size: large;
     position: relative;
     top:20px;
     left:15px;
-    text-shadow: 1px 1px rgb(126, 133, 133);
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
+}
+
+#time1 {
+    position: relative;
+    top:50px;
+    left:28px;
+    font-size: 100%;
+    font-family: monospace;
+    text-decoration: none;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0.1),rgba(255, 255, 255, 0.1));
+    color: rgb(0,0,0);
+    padding: 5px 10px 5px 10px;
+    border:0.6px solid white;
+}
+.time1label {
+    font-family: monospace;
+    position: relative;
+    top:50px;
+    left:25px;
+    font-size: 100%;
+    font-family: monospace;
+    text-decoration: none;
+    background: linear-gradient(to left, rgba(0,0,0,.01),rgba(0,0,0,.01));
+    color: #000000;
+    padding: 5px 0px 5px 25px;
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
+}
+
+#time2 {
+    position: relative;
+    top:50px;
+    left:28px;
+    font-size: 100%;
+    font-family: monospace;
+    text-decoration: none;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0.1),rgba(255, 255, 255, 0.1));
+    color: rgb(0,0,0);
+    padding: 5px 10px 5px 10px;
+    border:0.6px solid white;
+}
+.time2label {
+    font-family: monospace;
+    position: relative;
+    top:50px;
+    left:25px;
+    font-size: 100%;
+    font-family: monospace;
+    text-decoration: none;
+    background: linear-gradient(to left, rgba(0,0,0,.01),rgba(0,0,0,.01));
+    color: #000000;
+    padding: 5px 0px 5px 25px;
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
+}
+
+#time3 {
+    position: relative;
+    top:50px;
+    left:28px;
+    font-size: 100%;
+    font-family: monospace;
+    text-decoration: none;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0.1),rgba(255, 255, 255, 0.1));
+    color: rgb(0,0,0);
+    padding: 5px 10px 5px 10px;
+    border:0.6px solid white;
+}
+.time3label {
+    font-family: monospace;
+    position: relative;
+    top:50px;
+    left:25px;
+    font-size: 100%;
+    font-family: monospace;
+    text-decoration: none;
+    background: linear-gradient(to left, rgba(0,0,0,.01),rgba(0,0,0,.01));
+    color: #000000;
+    padding: 5px 0px 5px 25px;
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
+}
+#time4 {
+    position: relative;
+    top:50px;
+    left:28px;
+    font-size: 100%;
+    font-family: monospace;
+    text-decoration: none;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0.1),rgba(255, 255, 255, 0.1));
+    color: rgb(0,0,0);
+    padding: 5px 10px 5px 10px;
+    border:0.6px solid white;
+}
+.time4label {
+    font-family: monospace;
+    position: relative;
+    top:50px;
+    left:25px;
+    font-size: 100%;
+    font-family: monospace;
+    text-decoration: none;
+    background: linear-gradient(to left, rgba(0,0,0,.01),rgba(0,0,0,.01));
+    color: #000000;
+    padding: 5px 0px 5px 25px;
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
+}
+.eventPickerLabel {
+    font-family: monospace;
+    position: relative;
+    top:50px;
+    left:25px;
+    font-size: 110%;
+    font-family: monospace;
+    text-decoration: none;
+    background: linear-gradient(to left, rgba(0,0,0,.01),rgba(0,0,0,.01));
+    color: #000000;
+    padding: 5px 0px 5px 25px;
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
+}
+.eventPicker {
+    position: relative;
+    top:50px;
+    left:28px;
+    font-size: 110%;
+    font-family: monospace;
+    text-decoration: none;
+    background: linear-gradient(to left, rgba(255, 255, 255, 0.1),rgba(255, 255, 255, 0.1));
+    color: rgb(0,0,0);
+    padding: 5px 10px 5px 10px;
+    border:0.6px solid white;
+    text-shadow: 0.8px 0.8px rgba(255,255,255,0.5);
 }
